<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:scrollbars="vertical"
    android:scrollbarStyle="insideInset"
    android:fitsSystemWindows="true"
    >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/margin_standard"
        android:fitsSystemWindows="true"
        >

        <TextView
            android:id="@+id/about_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_short"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            app:layout_constraintBottom_toTopOf="@id/about_slogan_or_desc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            android:textAlignment="center"
            android:fitsSystemWindows="true"
            />

        <TextView
            android:id="@+id/about_slogan_or_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/about_header"
            app:layout_constraintBottom_toTopOf="@id/about_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="@dimen/margin_standard"
            android:text=""
            android:textAlignment="center"
            android:fitsSystemWindows="true"
            />

        <ImageView
            android:id="@+id/about_icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/desc_about_app"
            android:scaleType="center"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintBottom_toTopOf="@id/about_app_version"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/about_slogan_or_desc"
            android:fitsSystemWindows="true"
            />

        <TextView
            android:id="@+id/about_app_version"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/about_icon"
            app:layout_constraintBottom_toTopOf="@id/about_lib_version"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/margin_standard"
            android:text="@string/msg_app_version"
            android:textAlignment="center"
            android:fitsSystemWindows="true"
            />

        <TextView
            android:id="@+id/about_lib_version"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/about_app_version"
            app:layout_constraintBottom_toTopOf="@id/about_copyright"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/margin_short"
            android:text="@string/msg_lib_version"
            android:textAlignment="center"
            android:fitsSystemWindows="true"
            />

        <TextView
            android:id="@+id/about_copyright"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/about_lib_version"
            app:layout_constraintBottom_toTopOf="@id/about_fork_me_on_github"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="@dimen/margin_standard"
            android:layout_marginTop="@dimen/margin_short"
            android:text="@string/msg_copyright"
            android:textAlignment="center"
            android:fitsSystemWindows="true"
            />

        <TextView
            android:id="@+id/about_fork_me_on_github"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/about_copyright"
            app:layout_constraintBottom_toTopOf="@id/about_github_url"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/margin_standard"
            android:text="@string/msg_about_fork_me_on_github"
            android:textAlignment="center"
            android:fitsSystemWindows="true"
            />

        <TextView
            android:id="@+id/about_github_url"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/about_fork_me_on_github"
            app:layout_constraintBottom_toTopOf="@id/about_library_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/margin_short"
            android:autoLink="web"
            android:text="@string/msg_about_github_url"
            android:textAlignment="center"
            android:fitsSystemWindows="true"
            />

        <TextView
            android:id="@+id/about_library_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/about_github_url"
            app:layout_constraintBottom_toTopOf="@id/about_android_trademark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/margin_short"
            android:text="@string/msg_about_library_description"
            app:layout_constraintWidth_max="700dp"
            android:fitsSystemWindows="true"
            />

        <TextView
            android:id="@+id/about_android_trademark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/about_library_description"
            app:layout_constraintBottom_toTopOf="@id/about_divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="@dimen/margin_standard"
            android:layout_marginTop="@dimen/margin_short"
            android:text="@string/msg_android_trademark"
            app:layout_constraintWidth_max="700dp"
            android:fitsSystemWindows="true"
            />

        <View
            android:id="@+id/about_divider"
            android:layout_width="0dp"
            app:layout_constraintTop_toBottomOf="@id/about_android_trademark"
            app:layout_constraintBottom_toTopOf="@id/about_license_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="1px"
            android:background="?attr/colorPrimary"
            android:minHeight="1px"
            app:layout_constraintWidth_max="700dp"
            android:fitsSystemWindows="true"
            />

        <TextView
            android:id="@+id/about_license_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/about_divider"
            app:layout_constraintBottom_toTopOf="@id/about_license_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/margin_standard"
            android:text="@string/license"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textAlignment="center"
            android:fitsSystemWindows="true"
            />

        <TextView
            android:id="@+id/about_license_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/about_license_header"
            app:layout_constraintBottom_toTopOf="@id/about_licenses_lin_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/margin_short"
            android:text="@string/msg_license"
            app:layout_constraintWidth_max="700dp"
            android:fitsSystemWindows="true"
            />

        <LinearLayout
            android:id="@+id/about_licenses_lin_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_short"
            app:layout_constraintTop_toBottomOf="@id/about_license_1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical"
            app:layout_constraintWidth_max="700dp"
            android:nestedScrollingEnabled="true"
            />


    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>
